--- a/数据规整：连接、联合与重塑.ipynb
+++ b/数据规整：连接、联合与重塑.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ea2ad381",
+   "id": "0be1fd9a",
    "metadata": {},
    "source": [
     "## 8.1 分层索引"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "031192cf",
+   "id": "ad08c0a9",
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "22294b8c",
+   "id": "3802b0b1",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "43b56090",
+   "id": "e5552512",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d88895d0",
+   "id": "df3abf50",
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "63ef8aea",
+   "id": "e730b7c5",
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3849eb71",
+   "id": "bd370912",
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ebffc049",
+   "id": "dc5437b0",
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7f6be8cb",
+   "id": "f66a0db7",
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b5383a7",
+   "id": "dd92cdf6",
    "metadata": {},
    "source": [
     "### 8.1.3 使用DataFrame的列进行索引"
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f53011db",
+   "id": "6d95e178",
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "40fdbaf7",
+   "id": "e26b16d6",
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "f8570ba4",
+   "id": "41d2221d",
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "6ce44da9",
+   "id": "89da59a2",
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49d1109d",
+   "id": "c44e051f",
    "metadata": {},
    "source": [
     "## 8.2 联合与合并数据集"
@@ -738,7 +738,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "484faf13",
+   "id": "2971a70a",
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "2c04f892",
+   "id": "f26382f8",
    "metadata": {},
    "outputs": [
     {
@@ -863,7 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "02abfc4b",
+   "id": "7d877eea",
    "metadata": {},
    "outputs": [
     {
@@ -953,12 +953,285 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a691146a",
+   "metadata": {},
+   "source": [
+    "### 8.2.2 根据索引合并"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "3355fd1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>key</th>\n",
+       "      <th>value</th>\n",
+       "      <th>group_val</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>a</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>a</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>a</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>b</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>b</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  key  value  group_val\n",
+       "0   a      0        3.5\n",
+       "3   a      3        3.5\n",
+       "4   a      4        3.5\n",
+       "1   b      1        7.0\n",
+       "2   b      2        7.0"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "left1=pd.DataFrame({'key':['a','b','b','a','a','c'],\n",
+    "                   'value':range(6)})\n",
+    "right1=pd.DataFrame({'group_val':[3.5,7]},index=['a','b'])\n",
+    "pd.merge(left1,right1,left_on='key',right_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "43d83fe0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>key</th>\n",
+       "      <th>value</th>\n",
+       "      <th>group_val</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>a</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>a</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>a</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>b</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>b</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>c</td>\n",
+       "      <td>5</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  key  value  group_val\n",
+       "0   a      0        3.5\n",
+       "3   a      3        3.5\n",
+       "4   a      4        3.5\n",
+       "1   b      1        7.0\n",
+       "2   b      2        7.0\n",
+       "5   c      5        NaN"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#默认的合并方法是连接键相交，可以使用外连接惊醒合并\n",
+    "pd.merge(left1,right1,left_on='key',right_index=True,how='outer')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0784bf67",
+   "metadata": {},
+   "source": [
+    "### 8.2.3 沿轴向连接"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "5a01aecf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2,  3],\n",
+       "       [ 4,  5,  6,  7],\n",
+       "       [ 8,  9, 10, 11]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr=np.arange(12).reshape((3,4))\n",
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "b7315656",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2,  3,  0,  1,  2,  3],\n",
+       "       [ 4,  5,  6,  7,  4,  5,  6,  7],\n",
+       "       [ 8,  9, 10, 11,  8,  9, 10, 11]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.concatenate([arr,arr],axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "601d5d59",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2,  3],\n",
+       "       [ 4,  5,  6,  7],\n",
+       "       [ 8,  9, 10, 11],\n",
+       "       [ 0,  1,  2,  3],\n",
+       "       [ 4,  5,  6,  7],\n",
+       "       [ 8,  9, 10, 11]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#默认按行拼接\n",
+    "np.concatenate([arr,arr])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d7df92e",
+   "id": "8b02f355",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#join_axes=[[]]用来加入轴"
+   ]
   }
  ],
  "metadata": {
